# toshokan

./: .env  Cargo.toml  README.md  example_config.yaml
.github/workflows/: rust.yml
.sqlx/: query-01c21a2c5f1799c72bd2ef9c7ecc429fa08f1f2d988f5df839783df0b4321d2c.json  query-1e6cc5b9e8215920d475181c9589127308d92f38f6851b20468b9a2adc77b535.json  query-341e86f3918e612798840a2b6a788ce9ea89b48c26674266d9e74daf329ccd71.json
migrations/: 0001_base.down.sql  0001_base.up.sql  0001_index_files.down.sql  0001_index_files.up.sql  0001_indexes.down.sql  0001_indexes.up.sql
src/: args.rs  index_config.rs  lib.rs  main.rs  merge_directory.rs  opendal_file_handle.rs  opendal_reader.rs  page_cache_file_handle.rs  single_file_index_writer.rs  unified_index_writer.rs
src/commands/: create.rs  drop.rs  field_parser.rs  index.rs  json_reader.rs  merge.rs  mod.rs  search.rs
src/commands/sources/: buf_source.rs  kafka_checkpoint.rs  kafka_source.rs  mod.rs
src/config/: boolean.rs  datetime.rs  dynamic_object.rs  mod.rs  number.rs  text.rs
src/unified_index/: directory.rs  mod.rs  unified_directory.rs  writer.rs
tests/: config.rs  kafka_indexing.rs  merge.rs
tests/common/: mod.rs
tests/test_files/: array.json  hdfs-logs-multitenants-2.json
toshokan-core/: Cargo.toml
toshokan-core/src/: args.rs  bincode.rs  merge_directory.rs  opendal_file_handle.rs
toshokan-core/src/commands/: drop.rs  field_parser.rs  merge.rs  search.rs
toshokan-core/src/config/: datetime.rs  ip.rs  mod.rs  static_object.rs
toshokan-core/src/unified_index/: file_cache.rs  mod.rs  utils.rs  writer.rs
