[workspace]
members = [
  "toshokan-core",
]

[package]
name = "toshokan"
version = "0.1.0"
edition = "2021"
authors = ["Tony Solomonik @ tony.solomonik@gmail.com"]

[profile.release]
strip = true
lto = true

[profile.release-thin-lto]
inherits = "release"
lto = "thin"

[dependencies]
toshokan-core = { version = "0.1.0", path = "toshokan-core" }
color-eyre = { version = "0.6.3", default-features = false }
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
testcontainers = "0.17.0"
testcontainers-modules = { version = "0.5.0", features = ["postgres"] }
