[package]
name = "toshokan"
version = "0.1.0"
edition = "2021"
authors = ["Tony Solomonik @ tony.solomonik@gmail.com"]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
strip = true
lto = true

[profile.release-thin-lto]
inherits = "release"
lto = "thin"

[dependencies]
async-trait = "0.1.80"
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = { version = "0.6.3", default-features = false }
dotenvy = "0.15.7"
futures = "0.3.30"
log = "0.4.21"
once_cell = "1.19.0"
opendal = { version = "0.46.0", features = ["services-fs"] }
pretty_env_logger = "0.5.0"
rayon = "1.10.0"
serde = { version = "1.0.201", features = ["derive", "rc"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-tokio", "json"] }
tantivy = "0.22.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
uuid = { version = "1.8.0", features = ["v7"] }

[dev-dependencies]
async-tempfile = "0.5.0"
ctor = "0.2.8"
rstest = "0.21.0"
tempfile = "3.10.1"
testcontainers = "0.17.0"
testcontainers-modules = { version = "0.5.0", features = ["postgres"] }
