[package]
name = "toshokan"
version = "0.1.0"
edition = "2021"
authors = ["Tony Solomonik @ tony.solomonik@gmail.com"]
description = "A search engine on object storage."
repository = "https://github.com/tontinton/toshokan"
homepage = "https://github.com/tontinton/toshokan"
license = "Apache-2.0 OR MIT"

[profile.release]
strip = true
lto = true

[profile.release-thin-lto]
inherits = "release"
lto = "thin"

[features]
in-tests = []

[dependencies]
async-trait = "0.1.80"
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = { version = "0.6.3", default-features = false }
dotenvy = "0.15.7"
futures = "0.3.30"
humantime = "2.1.0"
log = "0.4.21"
once_cell = "1.19.0"
opendal = { version = "0.46.0", features = ["services-fs", "services-s3"] }
pretty_env_logger = "0.5.0"
rayon = "1.10.0"
rdkafka = "0.36.2"
serde = { version = "1.0.201", features = ["derive", "rc"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-tokio", "json"] }
tantivy = "0.22.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
uuid = { version = "1.8.0", features = ["v7"] }

[dev-dependencies]
async-tempfile = "0.5.0"
aws-sdk-s3 = { version = "1.38.0", features = ["behavior-version-latest"] }
ctor = "0.2.8"
lazy_static = "1.5.0"
notify = "6.1.1"
rand = "0.8.5"
rstest = "0.21.0"
rstest_reuse = "0.7.0"
tempfile = "3.10.1"
testcontainers = "0.17.0"
testcontainers-modules = { version = "0.5.0", features = ["postgres", "kafka", "localstack"] }
toshokan = { path = ".", features = ["in-tests"] }
